data/forge_javadoc/1.8.9/raw/net/minecraft/world/gen/structure/StructureStrongholdPieces.Prison.md
---
title: "StructureStrongholdPieces.Prison"
description: "public static class StructureStrongholdPieces.Prison extends StructureStrongholdPieces.Stronghold"
package: "net/minecraft/world/gen/structure"
version: "1.8.9"
forgeBuild: "11.15.1.2318"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.8.9-11.15.1.2318/net/minecraft/world/gen/structure/StructureStrongholdPieces.Prison.html"
sourceType: javadoc
---

# StructureStrongholdPieces.Prison

**Inheritance:** java.lang.Object → net.minecraft.world.gen.structure.StructureComponent → net.minecraft.world.gen.structure.StructureStrongholdPieces.Stronghold → net.minecraft.world.gen.structure.StructureStrongholdPieces.Prison

## Class signature

```java
public static class StructureStrongholdPieces.Prison extends StructureStrongholdPieces.Stronghold
```

## Methods

- `boolean addComponentParts(World worldIn, java.util.Random randomIn, StructureBoundingBox structureBoundingBoxIn)` — second Part of Structure generating, this for example places Spiderwebs, Mob Spawners, it closes Mineshafts at the end, it adds Fences...
- `void buildComponent(StructureComponent componentIn, java.util.List<StructureComponent> listIn, java.util.Random rand)` — Initiates construction of the Structure Component picked, at the current Location of StructGen
- `static StructureStrongholdPieces.Prison func_175860_a(java.util.List<StructureComponent> p_175860_0_, java.util.Random p_175860_1_, int p_175860_2_, int p_175860_3_, int p_175860_4_, EnumFacing p_175860_5_, int p_175860_6_)`

## Fields

- `Prison`
- `Prison`
